...
            app:icon="@drawable/baseline_keyboard_arrow_left_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <Spinner
            android:id="@+id/spinner_statistics_current_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
...
