...
            android:id="@+id/image_view_add_transaction_debit_or_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_remove_24"
            android:layout_marginRight="16dp"/>
    <EditText
        android:id="@+id/edit_text_add_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Amount"
        android:inputType="numberDecimal"
        android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/edit_text_add_transaction_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Description"
        android:layout_marginRight="16dp"/>
        <TextView
...
