...
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        style="@style/Widget.App.Button.ContainedButton.IconOnly"/>
    <TextView
        android:id="@+id/text_view_transaction_item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/image_view_transaction_item_category"
...
